HW2/E-1.3.20-Newton/wdir_msg/compile.err

Newton.java:38: error: variable kth_root_of_n might not have been initialized
        System.out.printf("%sth root of %s is %.5f\n", k, n, kth_root_of_n); 
                                                             ^
1 error


